# open.go

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  definations.go  go.mod  main.go  native.go  player.go  vehicle.go
bridge/: bridge.c  debug.c  main.c
include/bridge/: bridge.h  natives.h  player.h  vehicle.h
